# psychopy-iWorx

./: pyproject.toml
psychopy_iWorx/: __init__.py
psychopy_iWorx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
psychopy_iWorx/app/: ribbon.py
psychopy_iWorx/components/MessageLabScribeComponent/: __init__.py
psychopy_iWorx/components/exampleComponent/: __init__.py
psychopy_iWorx/routines/exampleStandaloneRoutine/: __init__.py
tests/: test_entry_points.py
tests/test_builder/: test_ExampleComponent.py
tests/test_coder/: test_ExampleVisualStim.py
