[project]
# the name of your plugin (required)
name = "psychopy_iWorx"
# the current version of the plugin (required)
version = "0.0.5" 
# a brief description of what your plugin does
description = "Send a TCP message to LabScribe to mark events in PsychoPy."
# link to the README.md file for a longer description of the project
readme = "README.md"
# contact information for yourself and anyone else who worked on the plugin 
authors = [
  { name = "iWorx Systems Inc", email = "info@iworx.com" },
]
# a license tells other people how to use your code and protects you from stealing
license = { text = "MIT" }
# add any packages which your plugin needs in order to run


[project.urls]
homepage = "https://github.com/psychopy/psychopy_iWorx"
changelog = "https://github.com/psychopy/psychopy_iWorx/blob/main/CHANGELOG.md"


[project.entry-points."psychopy.experiment.components"]
# This maps the Builder name to your Python class. 
# Format: NameInBuilder = "package.subfolder.file:ClassName"
MessageLabScribe = "psychopy_iWorx.components.MessageLabScribeComponent:MessageLabScribeComponent"


[tool.setuptools.package-data]
# Essential to include the PNG icon and any protocol files in the final install
"*" = ["*.png"] 

[tool.setuptools.packages.find]
exclude = ["docs*", "docs_src*", "tests*"]